# hexamond

./: LICENSE  README.md  hexamon.cabal  stack.yaml
app/: Consumer.hs  Producer.hs
src/: Hexamon.hs
