name:                hexamon
version:             0.1.0.0
synopsis:            Daemon (binary hexamond) listening on can0 interface, sending data to HTTP server.
-- description:
homepage:            https://github.com/lucansky/hexamond
license:             MIT
license-file:        LICENSE
author:              Adam Lucansky
maintainer:          adamlucansky@gmail.com
copyright:           2017 Adam Lucansky
category:            Application
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hexamon
  build-depends:       base >= 4.7 && < 5
                     , socketcan
                     , bytestring >= 0.10
                     , data-default >= 0.7
                     , network >= 2.6
                     , utf8-string > 1.0.1
                     , http-client
                     , wreq
                     , lens-aeson
                     , lens
                     , text
  default-language:    Haskell2010

executable producer
  hs-source-dirs:      app
  main-is:             Producer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hexamon
                     , socketcan
                     , bytestring >= 0.10
                     , data-default >= 0.7
                     , network >= 2.6
                     , utf8-string > 1.0.1
  default-language:    Haskell2010

executable hexamond
  hs-source-dirs:      app
  main-is:             Consumer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hexamon
                     , socketcan
                     , bytestring >= 0.10
                     , data-default >= 0.7
                     , network >= 2.6
                     , utf8-string > 1.0.1
  default-language:    Haskell2010

test-suite hexamon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hexamon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucansky/hexamond
